[gd_scene load_steps=40 format=2]

[ext_resource path="res://player/art/dice/right_rotate_right/3.png" type="Texture" id=1]
[ext_resource path="res://player/art/dice/right_rotate_left/1.png" type="Texture" id=3]
[ext_resource path="res://player/art/dice/top_rotate_down/1.png" type="Texture" id=4]
[ext_resource path="res://player/art/dice/right_rotate_left/3.png" type="Texture" id=5]
[ext_resource path="res://player/art/dice/right_rotate_left/2.png" type="Texture" id=6]
[ext_resource path="res://player/art/dice/right_rotate_right/1.png" type="Texture" id=9]
[ext_resource path="res://player/art/dice/right_rotate_right/2.png" type="Texture" id=10]
[ext_resource path="res://player/art/dice/top_rotate_down/3.png" type="Texture" id=11]
[ext_resource path="res://player/art/dice/bottom_rotate_down/2.png" type="Texture" id=14]
[ext_resource path="res://player/art/dice/idle.png" type="Texture" id=15]
[ext_resource path="res://player/art/dice/left_rotate_right/1.png" type="Texture" id=16]
[ext_resource path="res://player/art/dice/left_rotate_right/3.png" type="Texture" id=17]
[ext_resource path="res://player/art/dice/bottom_rotate_down/1.png" type="Texture" id=18]
[ext_resource path="res://player/art/dice/bottom_rotate_down/3.png" type="Texture" id=19]
[ext_resource path="res://player/art/dice/bottom_rotate_up/2.png" type="Texture" id=20]
[ext_resource path="res://player/art/dice/top_rotate_down/2.png" type="Texture" id=21]
[ext_resource path="res://player/art/dice/bottom_rotate_up/3.png" type="Texture" id=22]
[ext_resource path="res://player/art/dice/left_rotate_left/1.png" type="Texture" id=23]
[ext_resource path="res://player/art/dice/left_rotate_left/2.png" type="Texture" id=24]
[ext_resource path="res://player/art/dice/left_rotate_right/2.png" type="Texture" id=25]
[ext_resource path="res://player/art/dice/bottom_rotate_up/1.png" type="Texture" id=26]
[ext_resource path="res://player/art/dice/middle_rotate_down/1.png" type="Texture" id=27]
[ext_resource path="res://player/art/dice/middle_rotate_down/2.png" type="Texture" id=29]
[ext_resource path="res://player/art/dice/middle_rotate_down/3.png" type="Texture" id=31]
[ext_resource path="res://player/art/dice/left_rotate_left/3.png" type="Texture" id=32]
[ext_resource path="res://player/art/dice/top_rotate_up/3.png" type="Texture" id=33]
[ext_resource path="res://player/art/dice/top_rotate_up/2.png" type="Texture" id=34]
[ext_resource path="res://player/art/dice/middle_rotate_left/2.png" type="Texture" id=35]
[ext_resource path="res://player/art/dice/middle_rotate_left/3.png" type="Texture" id=36]
[ext_resource path="res://player/art/dice/middle_rotate_left/1.png" type="Texture" id=39]
[ext_resource path="res://player/art/dice/middle_rotate_up/1.png" type="Texture" id=40]
[ext_resource path="res://player/art/dice/middle_rotate_right/2.png" type="Texture" id=41]
[ext_resource path="res://player/art/dice/middle_rotate_right/3.png" type="Texture" id=42]
[ext_resource path="res://player/art/dice/middle_rotate_up/2.png" type="Texture" id=44]
[ext_resource path="res://player/art/dice/middle_rotate_right/1.png" type="Texture" id=45]
[ext_resource path="res://player/art/dice/middle_rotate_up/3.png" type="Texture" id=46]
[ext_resource path="res://player/art/dice/top_rotate_up/1.png" type="Texture" id=48]
[ext_resource path="res://player/dice.gd" type="Script" id=50]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 44 ), ExtResource( 46 ) ],
"loop": false,
"name": "middle_rotate_up",
"speed": 9.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 29 ), ExtResource( 31 ) ],
"loop": false,
"name": "middle_rotate_down",
"speed": 9.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 20 ), ExtResource( 22 ) ],
"loop": false,
"name": "bottom_rotate_up",
"speed": 9.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 14 ), ExtResource( 19 ) ],
"loop": false,
"name": "bottom_rotate_down",
"speed": 9.0
}, {
"frames": [ ExtResource( 48 ), ExtResource( 34 ), ExtResource( 33 ) ],
"loop": false,
"name": "top_rotate_up",
"speed": 9.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 21 ), ExtResource( 11 ) ],
"loop": false,
"name": "top_rotate_down",
"speed": 9.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 25 ), ExtResource( 17 ) ],
"loop": false,
"name": "left_rotate_right",
"speed": 9.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 41 ), ExtResource( 42 ) ],
"loop": false,
"name": "middle_rotate_right",
"speed": 9.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 32 ) ],
"loop": false,
"name": "left_rotate_left",
"speed": 9.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 1 ) ],
"loop": false,
"name": "right_rotate_right",
"speed": 9.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "right_rotate_left",
"speed": 9.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": false,
"name": "middle_rotate_left",
"speed": 9.0
} ]

[node name="dice" type="Node2D"]
modulate = Color( 0, 1, 0, 1 )
script = ExtResource( 50 )

[node name="1" type="AnimatedSprite" parent="."]
position = Vector2( -16, -16 )
frames = SubResource( 1 )
animation = "idle"
speed_scale = 2.0
playing = true

[node name="2" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 1 )
animation = "idle"
speed_scale = 2.0

[node name="3" type="AnimatedSprite" parent="."]
position = Vector2( 16, -16 )
frames = SubResource( 1 )
animation = "idle"
speed_scale = 2.0

[node name="4" type="AnimatedSprite" parent="."]
position = Vector2( -16, 0 )
frames = SubResource( 1 )
animation = "idle"
speed_scale = 2.0

[node name="5" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
speed_scale = 2.0

[node name="6" type="AnimatedSprite" parent="."]
position = Vector2( 16, 0 )
frames = SubResource( 1 )
animation = "idle"
speed_scale = 2.0

[node name="7" type="AnimatedSprite" parent="."]
position = Vector2( -16, 16 )
frames = SubResource( 1 )
animation = "idle"
speed_scale = 2.0

[node name="8" type="AnimatedSprite" parent="."]
position = Vector2( 0, 16 )
frames = SubResource( 1 )
animation = "idle"
speed_scale = 2.0

[node name="9" type="AnimatedSprite" parent="."]
position = Vector2( 16, 16 )
frames = SubResource( 1 )
animation = "idle"
speed_scale = 2.0

[node name="state" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="modulate" type="Tween" parent="state"]

[node name="rotation" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="1" to="." method="_on_1_animation_finished"]
[connection signal="animation_finished" from="2" to="." method="_on_2_animation_finished"]
[connection signal="animation_finished" from="3" to="." method="_on_3_animation_finished"]
[connection signal="animation_finished" from="4" to="." method="_on_4_animation_finished"]
[connection signal="animation_finished" from="5" to="." method="_on_5_animation_finished"]
[connection signal="animation_finished" from="6" to="." method="_on_6_animation_finished"]
[connection signal="animation_finished" from="7" to="." method="_on_7_animation_finished"]
[connection signal="animation_finished" from="8" to="." method="_on_8_animation_finished"]
[connection signal="animation_finished" from="9" to="." method="_on_9_animation_finished"]
[connection signal="tween_completed" from="state/modulate" to="." method="_on_modulate_tween_completed"]
[connection signal="timeout" from="rotation" to="." method="_on_rotation_timeout"]
